# Quiz_application

quiz/: first.py  login.py  split.py  upload.py
quiz/Home/: Makefile  README.md  cosineSimilarity.ipynb  pyproject.toml  requirements.txt
quiz/Home/quesgen/: insert.py  insert_fineturned.py  main.py  question_T5.csv  question_fine_turned.csv  quiz_db.py  test.py
quiz/Home/quesgen/settings/: app_config.py  mock.py
quiz/Home/quesgen/ui/: sidebar.py
quiz/Home/quesgen/ui/pages/: admin_dashboard.py  configure.py  configure_fine.py  final.py  final_quiz.py  history.py  login.py  manage_files.py  quiz.py  quiz_fine.py  register.py  report.py  retake_score.py  upload.py
quiz/Home/static/html/: style.html
quiz_data/: Fine_tuned_quiz_details.csv  fine_tuned_and_retake_feedback_score.csv  non_fine_tuned_quiz_details.csv  non_fine_tuned_score_details.csv  retake_quiz_details.csv  user_activity_logs.csv  user_details.csv
